Fixed inputted text was invisible

--- a/src/my-react-frontend/src/components/Style/Login.css
+++ b/src/my-react-frontend/src/components/Style/Login.css
@@ -18,7 +18,6 @@ h2 {
     width: 420px;
     background: transparent;
     border: 2px solid rgba(255, 255, 255, .2);
-    color: #fff;
     border-radius: 10px;
     padding: 30px 40px;
     backdrop-filter: blur(30px);
